Update submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/open-transactions/opentxs-cmake
 [submodule "QR-Code-generator"]
 	path = deps/QR-Code-generator
-	url = git@github.com:nayuki/QR-Code-generator.git
+	url = https://github.com/nayuki/QR-Code-generator.git
