Use opentxs as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "QR-Code-generator"]
 	path = deps/QR-Code-generator
 	url = https://github.com/nayuki/QR-Code-generator.git
+[submodule "deps/opentxs"]
+	path = deps/opentxs
+	url = https://github.com/open-transactions/opentxs
