--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,12 +6,8 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-20.04, macos-10.15, windows-2019]
+        platform: [macos-10.15, windows-2019]
         include:
-          - platform: 'ubuntu-20.04'
-            vcpkg_triplet: 'x64-linux'
-            cmake_extra: ''
-            zip_command: 'zip metier.zip metier'
           - platform: 'macos-10.15'
             vcpkg_triplet: 'x64-osx'
             cmake_extra: ''
