--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,7 +14,7 @@ jobs:
             zip_command: 'zip metier.zip metier'
           - platform: 'windows-2019'
             vcpkg_triplet: 'x64-windows-static'
-            cmake_extra: '-DCMAKE_MSVC_RUNTIME_LIBRARY="" -DCMAKE_C_FLAGS="/MTd /Zi" -DCMAKE_CXX_FLAGS="/MTd /EHsc /Zi" -DCMAKE_EXE_LINKER_FLAGS="/NODEFAULTLIB:libcmt.lib /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcrtd.lib" -DCMAKE_STATIC_LINKER_FLAGS="/NODEFAULTLIB:libcmt.lib /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcrtd.lib"'
+            cmake_extra: ''
             zip_command: '7z a -tzip metier.zip metier.exe'
     runs-on: ${{ matrix.platform }}
     steps:
@@ -44,7 +44,7 @@ jobs:
         useVcpkgToolchainFile: true
         vcpkgTriplet: '${{ matrix.vcpkg_triplet }}'
         buildDirectory: '${{ github.workspace }}/build'
-        cmakeAppendedArgs: '-GNinja -DCMAKE_BUILD_TYPE=Debug -DMETIER_PEDANTIC_BUILD=OFF -DOT_USE_VCPKG_TARGETS=ON -DMETIER_BUNDLED_OPENTXS=ON ${{ matrix.cmake_extra }}'
+        cmakeAppendedArgs: '-GNinja -DCMAKE_BUILD_TYPE=Debug -DMETIER_PEDANTIC_BUILD=OFF -DMETIER_BUNDLED_OPENTXS=ON ${{ matrix.cmake_extra }}'
         buildWithCMake: true
         buildWithCMakeArgs: '-- -k 0'
     - name: 'Package'
