Display profile name and qr code

--- a/src/models/CMakeLists.txt
+++ b/src/models/CMakeLists.txt
@@ -8,6 +8,7 @@ set(cxx-sources
     "accountlist.cpp"
     "blockchainchooser.cpp"
     "licenses.cpp"
+    "profile.cpp"
     "seedlang.cpp"
     "seedsize.cpp"
     "seedtype.cpp"
@@ -18,6 +19,7 @@ set(moc-headers
     "accountlist.hpp"
     "blockchainchooser.hpp"
     "licenses.hpp"
+    "profile.hpp"
     "seedlang.hpp"
     "seedsize.hpp"
     "seedtype.hpp"
