Improve send dialog

--- a/licenses/CMakeLists.txt
+++ b/licenses/CMakeLists.txt
@@ -22,5 +22,10 @@ target_include_directories(
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 target_link_libraries(
-  metier-license PRIVATE opentxs protobuf::libprotobuf-lite Qt5::Core
+  metier-license
+  PRIVATE
+    opentxs
+    protobuf::libprotobuf-lite
+    Qt5::Core
+    Qt5::Gui
 )
