--- a/src/models/CMakeLists.txt
+++ b/src/models/CMakeLists.txt
@@ -35,6 +35,6 @@ add_library(
 )
 target_link_libraries(
   metier-models
-  PUBLIC Qt5::Core protobuf::libprotobuf-lite
+  PUBLIC Qt5::Core Qt5::Gui protobuf::libprotobuf-lite
   PRIVATE metier-license opentxs
 )
