--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ if(NOT METIER_QML_INTERFACE)
 endif()
 
 set(cxx-sources "main.cpp" "otwrap.cpp")
-set(cxx-headers "otwrap/imp.hpp" "otwrap/validateseed.hpp")
+set(cxx-headers "otwrap/imp.hpp")
 set(moc-headers "app.hpp" "otwrap.hpp")
 qt5_wrap_cpp(moc-sources "${moc-headers}")
 set(object-deps
