Set application icon on Linux and Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@
 cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0091 NEW)
 project(metier)
+set(METIER_APPSTREAM_ID "org.opentransactions.metier")
+set(METIER_APPSTREAM_NAME "Métier")
 list(APPEND CMAKE_MODULE_PATH "${${PROJECT_NAME}_SOURCE_DIR}/cmake")
 include(open-transactions-common)
 
@@ -163,3 +165,4 @@ add_definitions("${QT_DEFINITIONS}")
 add_subdirectory(deps)
 add_subdirectory(licenses)
 add_subdirectory(src)
+add_subdirectory(package)
