--- a/src/widgets/CMakeLists.txt
+++ b/src/widgets/CMakeLists.txt
@@ -56,3 +56,6 @@ target_link_libraries(
     opentxs
     protobuf::libprotobuf-lite
 )
+target_compile_definitions(
+  metier-widgets PRIVATE -DMETIER_APPSTREAM_NAME="${METIER_APPSTREAM_NAME}"
+)
