--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -7,11 +7,19 @@ set(cxx-sources "app.cpp")
 set(cxx-headers "imp.hpp")
 
 if(METIER_QML_INTERFACE)
-  list(APPEND cxx-sources "qml.cpp")
+  list(
+    APPEND
+    cxx-sources
+    "qml.cpp"
+  )
   set(moc-headers "qml.hpp")
   qt5_wrap_cpp(moc-sources "${moc-headers}")
 else()
-  list(APPEND cxx-sources "legacy.cpp")
+  list(
+    APPEND
+    cxx-sources
+    "legacy.cpp"
+  )
   set(moc-headers "")
   set(moc-sources "")
 endif()
@@ -23,7 +31,13 @@ add_library(
   "${moc-sources}"
   "${moc-headers}"
 )
-target_link_libraries(metier-app PRIVATE Qt5::Core Qt5::Gui opentxs)
+target_link_libraries(
+  metier-app
+  PRIVATE
+    Qt5::Core
+    Qt5::Gui
+    opentxs
+)
 
 if(METIER_QML_INTERFACE)
   target_link_libraries(metier-app PRIVATE Qt5::Qml Qt5::Quick)
